@@ -506,7 +506,7 @@ attribute_hidden FUNTAB R_FunTab[] = {
     {"utf8ToInt", do_utf8ToInt, 1, 11, 1, {PP_FUNCALL, PREC_FN, 0}},
     {"intToUtf8", do_intToUtf8, 1, 11, 2, {PP_FUNCALL, PREC_FN, 0}},
     {"encodeString", do_encodeString, 1, 11, 5, {PP_FUNCALL, PREC_FN, 0}},
-    {"iconv", do_iconv, 0, 11, 4, {PP_FUNCALL, PREC_FN, 0}},
+    {"iconv", do_iconv, 0, 11, 5, {PP_FUNCALL, PREC_FN, 0}},
     {"strtrim", do_strtrim, 0, 11, 2, {PP_FUNCALL, PREC_FN, 0}},
 
     /* Type Checking (typically implemented in ./coerce.c ) */
